Fix the mobile emulator to use the correct device scale when disabled.

The mobile emulator was triggering a layout before it had reapplied the
original viewport parameters when it was being disabled, which with
use-zoom-for-dsf enabled was causing the wrong viewport size to be given
to various components, like plugins and scrollbars.

BUG=628501,628185
R=dgozman@chromium.org

Review URL: https://codereview.chromium.org/2168313002 .

Committed: https://crrev.com/dd487d719092b0ad3fbf162002bc1c1e43ec55a6 [formerly d89c7a1578f9f16f6e1fa4375aab232b67fe0f9f]
Cr-Original-Commit-Position: refs/heads/master@{#407294}
Cr-Commit-Position: refs/heads/master@{#407639}

Former-commit-id: 1c78b3850f956c1507e4cdf9429652ee0ef15cb0